Upgrade jdk 21 (#25)
* move kafka module to kafka-basics

* Upgrade AOP example to spring boot 3.5.3

* Upgrade Jackson example to spring boot 3.5.3

* Upgrade kafka example to spring boot 3.5.3

* Upgrade spring data example to spring boot 3.5.3

* Upgrade spring webflux example to spring boot 3.5.3

* Upgrade reactive-item-api-client example to spring boot 3.5.3

* Upgrade reactor-demo example to spring boot 3.5.3

* Example 1

* Example 2

* Fixing OrdersControllerIT

* Upgrade korders-processor-consumers to spring boot 3.5.3

* Upgrade korders-processor-consumers-error-handler to spring boot 3.5.3

* Upgrade processing csv example to spring boot 3.5.3

* Palindrome example